# moondream

./: .gitignore  batch_generate_example.py  gradio_demo.py  hf_release.py  pyproject.toml  requirements.txt  setup.py  webcam_gradio_demo.py
experiments/: Finetuning.ipynb  accel_example1.py  accel_test.ipynb  accel_vision1.py  dataset_load1.py  finetune.py  finetune1.py  finetune2.ipynb  finetune2.py  finetune3.py  finetuning_accel.py  hf_dataset.py  hf_finetune.py  hf_finetune2.py  hf_finetune3.py  hf_lec01.py  hf_lec02.ipynb  hf_lec03.py  hf_lec04.py  hf_processing.py  moondream_accel.py  original_moondream_finetune.py  vision_encoder.ipynb
moondream/: __init__.py  moondream.py  util.py
notebooks/: Finetuning.ipynb
