[project]
name = "moondream"
dynamic = ["version"]
description = "a tiny vision language model that kicks ass and runs anywhere"
authors = [{ name = "vikhyatk", email = "contact@moondream.ai" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "accelerate>=0.25.0",
  "huggingface-hub>=0.20.1",
  "Pillow>=10.1.0",
  "torch>=2.1.2",
  "torchvision>=0.16.2",
  "transformers>=4.36.2",
  "einops>=0.7.0",
  "gradio>=4.15.0",
]

[project.urls]
homepage = "https://moondream.ai/"
documentation = "https://github.com/3DAlgoLab/moondream"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moondream", "moondream.*"]
exclude = []

[tool.setuptools.package-data]
litgpt = ["LICENSE", "README.md"]

[tool.setuptools.dynamic]
version = { attr = "moondream.__version__" }
